Changed mnist directory

--- a/notebooks/lenet_bin_weights.ipynb
+++ b/notebooks/lenet_bin_weights.ipynb
@@ -108,7 +108,7 @@
     "                        strides=[1, 2, 2, 1], padding='SAME')\n",
     "\n",
     "# Import data\n",
-    "mnist = input_data.read_data_sets('/home/adamek/Desktop/mnist/drive-download-20170302T160017Z-001', one_hot=True)\n",
+    "mnist = input_data.read_data_sets('/tmp/dataset', one_hot=True)\n",
     "\n",
     "# Create the model\n",
     "x = tf.placeholder(tf.float32, [None, 784])\n",
