Dodanie notebooka z bin conv, poprawa wygladu, puszczenie leneta na wiekszej ilosci probek

--- a/notebooks/lenet_bin_weights.ipynb
+++ b/notebooks/lenet_bin_weights.ipynb
@@ -1,66 +1,81 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Binaryzacja wag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####  LENET uczony na 2000 * 50 samplach"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting /home/adamek/Desktop/mnist/drive-download-20170302T160017Z-001/train-images-idx3-ubyte.gz\n",
-      "Extracting /home/adamek/Desktop/mnist/drive-download-20170302T160017Z-001/train-labels-idx1-ubyte.gz\n",
-      "Extracting /home/adamek/Desktop/mnist/drive-download-20170302T160017Z-001/t10k-images-idx3-ubyte.gz\n",
-      "Extracting /home/adamek/Desktop/mnist/drive-download-20170302T160017Z-001/t10k-labels-idx1-ubyte.gz\n",
+      "Extracting /tmp/dataset\\train-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/dataset\\train-labels-idx1-ubyte.gz\n",
+      "Extracting /tmp/dataset\\t10k-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/dataset\\t10k-labels-idx1-ubyte.gz\n",
       "step 0, training accuracy 0.14\n",
-      "step 100, training accuracy 0.72\n",
-      "step 200, training accuracy 0.88\n",
-      "step 300, training accuracy 0.82\n",
-      "step 400, training accuracy 0.94\n",
-      "step 500, training accuracy 0.92\n",
-      "step 600, training accuracy 1\n",
+      "step 100, training accuracy 0.82\n",
+      "step 200, training accuracy 0.94\n",
+      "step 300, training accuracy 0.84\n",
+      "step 400, training accuracy 0.92\n",
+      "step 500, training accuracy 0.9\n",
+      "step 600, training accuracy 0.98\n",
       "step 700, training accuracy 0.94\n",
       "step 800, training accuracy 0.88\n",
-      "step 900, training accuracy 0.98\n",
-      "step 1000, training accuracy 0.92\n",
-      "step 1100, training accuracy 0.96\n",
-      "step 1200, training accuracy 0.98\n",
-      "step 1300, training accuracy 0.92\n",
-      "step 1400, training accuracy 0.94\n",
-      "step 1500, training accuracy 1\n",
-      "step 1600, training accuracy 0.98\n",
-      "step 1700, training accuracy 1\n",
-      "step 1800, training accuracy 0.88\n",
-      "step 1900, training accuracy 0.94\n",
-      "117.81269526481628\n",
-      "test accuracy 0.9693\n"
+      "step 900, training accuracy 0.96\n",
+      "step 1000, training accuracy 0.94\n",
+      "step 1100, training accuracy 0.94\n",
+      "step 1200, training accuracy 0.96\n",
+      "step 1300, training accuracy 0.98\n",
+      "step 1400, training accuracy 0.98\n",
+      "step 1500, training accuracy 0.96\n",
+      "step 1600, training accuracy 0.92\n",
+      "step 1700, training accuracy 0.94\n",
+      "step 1800, training accuracy 0.98\n",
+      "step 1900, training accuracy 0.96\n",
+      "step 2000, training accuracy 1\n",
+      "step 2100, training accuracy 0.92\n",
+      "step 2200, training accuracy 0.96\n",
+      "step 2300, training accuracy 1\n",
+      "step 2400, training accuracy 0.96\n",
+      "step 2500, training accuracy 0.96\n",
+      "step 2600, training accuracy 1\n",
+      "step 2700, training accuracy 0.98\n",
+      "step 2800, training accuracy 0.94\n",
+      "step 2900, training accuracy 0.98\n",
+      "step 3000, training accuracy 0.94\n",
+      "step 3100, training accuracy 0.98\n",
+      "step 3200, training accuracy 0.96\n",
+      "step 3300, training accuracy 1\n",
+      "step 3400, training accuracy 0.98\n",
+      "step 3500, training accuracy 1\n",
+      "step 3600, training accuracy 1\n",
+      "step 3700, training accuracy 1\n",
+      "step 3800, training accuracy 0.98\n",
+      "step 3900, training accuracy 1\n",
+      "420.8656132221222\n",
+      "test accuracy 0.9817\n"
      ]
     }
    ],
    "source": [
-    "# Copyright 2015 The TensorFlow Authors. All Rights Reserved.\n",
-    "#\n",
-    "# Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-    "# you may not use this file except in compliance with the License.\n",
-    "# You may obtain a copy of the License at\n",
-    "#\n",
-    "#     http://www.apache.org/licenses/LICENSE-2.0\n",
-    "#\n",
-    "# Unless required by applicable law or agreed to in writing, software\n",
-    "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-    "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-    "# See the License for the specific language governing permissions and\n",
-    "# limitations under the License.\n",
-    "# ==============================================================================\n",
-    "\n",
-    "\"\"\"A very simple MNIST classifier.\n",
-    "\n",
-    "See extensive documentation at\n",
-    "http://tensorflow.org/tutorials/mnist/beginners/index.md\n",
-    "\"\"\"\n",
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
@@ -101,7 +116,8 @@
     "                a = tf.stop_gradient(tf.reduce_sum(abs, [0,1,2])/n)\n",
     "                # Przy tej implementacji siec sie uczy.\n",
     "                #a = tf.stop_gradient(tf.reduce_sum(abs, [0,1,2,3])/n)\n",
-    "                return conv2d(x, tf.sign(W/a)*a)\n",
+    "                \n",
+    "                return conv2d(x, tf.sign(W/a))*a\n",
     "\n",
     "def max_pool_2x2(x):\n",
     "  return tf.nn.max_pool(x, ksize=[1, 2, 2, 1],\n",
@@ -152,7 +168,7 @@
     "\n",
     "time_start = time.time()\n",
     "\n",
-    "for i in range(2000):\n",
+    "for i in range(4000):\n",
     "  batch = mnist.train.next_batch(50)\n",
     "  if i%100 == 0:\n",
     "    train_accuracy = accuracy.eval(session=sess, feed_dict={\n",
@@ -164,8 +180,7 @@
     "print(time.time() - time_start)\n",
     "\n",
     "print(\"test accuracy %g\"%accuracy.eval(session=sess,feed_dict={\n",
-    "    x: mnist.test.images, y_: mnist.test.labels, keep_prob: 1.0}))\n",
-    "\n"
+    "    x: mnist.test.images, y_: mnist.test.labels, keep_prob: 1.0}))"
    ]
   },
   {
@@ -176,8 +191,8 @@
    },
    "outputs": [],
    "source": [
-    "170.99122881889343\n",
-    "test accuracy 0.9679"
+    "2000 * 50 samples = test accuracy 0.9679\n",
+    "4000 * 50 samples = test accuracy 0.9817"
    ]
   }
  ],
