bin conv poprawna inferencja, blad w gradientach

--- a/notebooks/test_binary_convolution.ipynb
+++ b/notebooks/test_binary_convolution.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -54,18 +54,7 @@
     "FLAGS = None\n",
     "def conv2d(x, W):\n",
     "  return tf.nn.conv2d(x, W, strides=[1, 1, 1, 1], padding='VALID')\n",
-    "\n",
-    "def conv_bin(x, W):\n",
-    "    #return conv2d(x,W);\n",
-    "    G = tf.get_default_graph()\n",
-    "    with G.gradient_override_map({\"Sign\": \"Identity\"}):\n",
-    "                w_shape = tf.shape(W)\n",
-    "                n = tf.cast(tf.reduce_prod(w_shape[0:-1]),tf.float32) \n",
-    "                abs = tf.abs(W)\n",
-    "                a = tf.stop_gradient(tf.reduce_sum(abs, [0,1,2])/n)  \n",
-    "                K = \n",
-    "                return conv2d(x, tf.sign(W/a))*a\n",
-    "\n",
+    "      \n",
     "def conv_bin_func(func, inp, Tout, stateful=True, name=None, grad=None):\n",
     "    g = tf.get_default_graph()\n",
     "    with g.gradient_override_map({\"PyFunc\": \"Conv2D\"}):\n",
@@ -86,7 +75,19 @@
     "w = np.zeros([2,2,1,1])\n",
     "w[0:2,0:2,0,0] = np.vstack(([0.1,1],[1,1]))\n",
     "W_conv1 = tf.Variable(tf.cast(w,dtype=tf.float32))\n",
-    "h_conv_bin = conv_bin(x_reshaped, W_conv1)\n",
+    "G = tf.get_default_graph()\n",
+    "with G.gradient_override_map({\"Sign\": \"Identity\"}):\n",
+    "            w_shape = tf.shape(W_conv1)\n",
+    "            n = tf.cast(tf.reduce_prod(w_shape[0:-1]),tf.float32) \n",
+    "            abs = tf.abs(W_conv1)\n",
+    "            a = tf.stop_gradient(tf.reduce_sum(abs, [0,1,2])/n)  \n",
+    "            absX = tf.abs(x_reshaped)\n",
+    "            k = tf.ones(w_shape, dtype=tf.float32) / n\n",
+    "            K = conv2d(absX, k)\n",
+    "            x_sign = tf.sign(x_reshaped)\n",
+    "            w_sign = tf.sign(W_conv1/a)\n",
+    "            h_conv_bin = conv2d(x_sign, w_sign)*a*K\n",
+    "\n",
     "h_conv = conv2d(x_reshaped, W_conv1)\n",
     "\n",
     "sess = tf.Session()\n",
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -112,14 +113,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[[ 11.99999905]]\n",
+      "[[[[ 19.99999809]]\n",
       "\n",
-      "  [[ 16.        ]]]\n",
+      "  [[ 19.99999809]]]\n",
       "\n",
       "\n",
-      " [[[ 24.00000191]]\n",
+      " [[[ 19.99999809]]\n",
       "\n",
-      "  [[ 28.        ]]]]\n",
+      "  [[ 19.99999809]]]]\n",
       "[[[[ 12.]]\n",
       "\n",
       "  [[ 16.]]]\n",
