test bin conv na lenecie

--- a/notebooks/test_binary_convolution.ipynb
+++ b/notebooks/test_binary_convolution.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -75,6 +75,8 @@
     "w = np.zeros([2,2,1,1])\n",
     "w[0:2,0:2,0,0] = np.vstack(([0.1,1],[1,1]))\n",
     "W_conv1 = tf.Variable(tf.cast(w,dtype=tf.float32))\n",
+    "\n",
+    "#wyjalem to z funkcji aby mozna bylo latwiej podgladac gradienty/wyniki poszczegolnych operacji\n",
     "G = tf.get_default_graph()\n",
     "with G.gradient_override_map({\"Sign\": \"Identity\"}):\n",
     "            w_shape = tf.shape(W_conv1)\n",
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -133,6 +135,7 @@
     }
    ],
    "source": [
+    "#tutaj poki co chyba glownym problemem jest to ze gradienty wychodza rowne. czy powinno tak byc?\n",
     "var_grad_bin = tf.gradients(h_conv_bin, W_conv1)[0]\n",
     "gradients_bin = var_grad_bin.eval(session=sess, feed_dict={x: np.reshape(numbers,(1,9))})\n",
     "var_grad = tf.gradients(h_conv, W_conv1)[0]\n",
