Added proper custom convolution and unit tests

--- a/notebooks/custom_conv_using_conv2d_gradient.ipynb
+++ b/notebooks/custom_conv_using_conv2d_gradient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -46,49 +46,48 @@
     "                                    'NHWC')]\n",
     "\n",
     "#Nasza operacja\n",
+    "#result[batch,0:conv_height,0:conv_width,w_filter] -> suma konwolucji wszystkich channeli dla konkretnego batcha\n",
+    "#i filtra\n",
     "def conv(x, W, strides=[1, 1, 1, 1], padding='VALID'):\n",
-    "    print(x.shape)\n",
-    "    n = x.shape[0]\n",
-    "    x_height = x.shape[1]\n",
-    "    x_width = x.shape[2]\n",
-    "    W_height = W.shape[0]\n",
-    "    W_width = W.shape[1]\n",
-    "    filters = W.shape[3]\n",
-    "    inp = x[0,0:x_height,0:x_width,0]\n",
-    "    fil = np.rot90(W[0:W_height,0:W_width,0,0], 2)\n",
-    "    result = signal.convolve2d(inp, fil, 'valid')\n",
-    "    return result.reshape((-1,2,2,1))"
+    "    batches,x_height,x_width,x_channels = x.shape\n",
+    "    W_height,W_width,w_channels,w_filters = W.shape\n",
+    "    assert w_channels == x_channels\n",
+    "    result = None\n",
+    "    for batch in range(batches):\n",
+    "        for w_filter in range(w_filters):\n",
+    "            for channel in range(w_channels):\n",
+    "                inp = x[batch,0:x_height,0:x_width,channel]\n",
+    "                fil = np.rot90(W[0:W_height,0:W_width,channel,w_filter], 2)\n",
+    "                conv_result = signal.convolve2d(inp, fil, 'valid')\n",
+    "                conv_height,conv_width = conv_result.shape\n",
+    "                if result is None:\n",
+    "                    result = np.zeros((batches,conv_height,conv_width,w_filters), dtype=np.float32)\n",
+    "                tmp = result[batch,0:conv_height,0:conv_width,w_filter]\n",
+    "                result[batch,0:conv_height,0:conv_width,w_filter] = np.add(tmp, conv_result)\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 3, 3, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#test na feed forward, jeden input, jeden weight filter\n",
-    "def feedforward_1i_1w():\n",
+    "#test na feed forward, jeden input, jeden channel, jeden weight filter\n",
+    "def feedforward_1i_1ch_1w():\n",
     "    x = tf.placeholder(tf.float32, [None, 9])\n",
     "    x_reshaped = tf.reshape(x, [-1,3,3,1])\n",
     "    w = np.zeros([2,2,1,1])\n",
-    "    w[0:2,0:2,0,0] = np.vstack(([0.1,0.2],[1,0.3]))\n",
+    "    w[0:2,0:2,0,0] = np.vstack(([1,0],[0,0]))\n",
     "    W_conv1 = tf.Variable(tf.cast(w,dtype=tf.float32))\n",
     "\n",
     "    sess = tf.Session()\n",
     "    sess.as_default()\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "\n",
-    "    numbers = np.reshape(np.array([2,1,1,1,1,1,1,2,1], dtype=np.float32),(1,9))\n",
+    "    numbers = np.reshape(np.array([1,2,3,4,5,6,7,8,9], dtype=np.float32),(1,9))\n",
     "    result = custom_conv2d(x_reshaped, W_conv1)\n",
     "    result_n = conv2d(x_reshaped, W_conv1)\n",
     "    result_conv = result.eval(session=sess, feed_dict={x: numbers})\n",
@@ -100,45 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 3, 3, 1)\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-47-9c013235aa64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[1;32massert\u001b[0m \u001b[0mresult_conv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mresult_norm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[1;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_conv\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mresult_norm\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m0.01\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mfeedforward_2i_1w\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-47-9c013235aa64>\u001b[0m in \u001b[0;36mfeedforward_2i_1w\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mresult_conv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msess\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mresult_norm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresult_n\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msess\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[1;32massert\u001b[0m \u001b[0mresult_conv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mresult_norm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[1;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_conv\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mresult_norm\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m0.01\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mfeedforward_2i_1w\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#test na feed forward, jeden input, jeden weight filter\n",
-    "def feedforward_2i_1w():\n",
+    "#test na feed forward, jeden input, dwa channele, dwa weight filter\n",
+    "def feedforward_1i_2ch_2w():\n",
     "    x = tf.placeholder(tf.float32, [None, 9])\n",
-    "    x_reshaped = tf.reshape(x, [-1,3,3,1])\n",
-    "    w = np.zeros([2,2,1,1])\n",
-    "    w[0:2,0:2,0,0] = np.vstack(([0.1,0.2],[1,0.3]))\n",
+    "    x_reshaped = tf.reshape(x, [-1,3,3,2])\n",
+    "    w = np.zeros([2,2,2,2])\n",
+    "    w[0:2,0:2,0,0] = np.vstack(([1,1],[1,1]))\n",
+    "    w[0:2,0:2,1,0] = np.vstack(([1,1],[1,1]))\n",
+    "    w[0:2,0:2,0,1] = np.vstack(([1,1],[1,1]))\n",
     "    W_conv1 = tf.Variable(tf.cast(w,dtype=tf.float32))\n",
     "\n",
     "    sess = tf.Session()\n",
     "    sess.as_default()\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "\n",
-    "    numbers = np.reshape(np.array([2,1,1,1,1,1,1,2,1], dtype=np.float32),(1,9))\n",
+    "    numbers = np.reshape(np.array([1,2,3,4,5,6,7,8,9], dtype=np.float32),(1,9))\n",
     "    inputs = np.vstack((numbers,numbers));\n",
     "    result = custom_conv2d(x_reshaped, W_conv1)\n",
     "    result_n = conv2d(x_reshaped, W_conv1)\n",
@@ -146,27 +127,52 @@
     "    result_norm = result_n.eval(session=sess, feed_dict={x: inputs})\n",
     "    assert result_conv.shape == result_norm.shape\n",
     "    assert np.linalg.norm(result_conv-result_norm) < 0.01\n",
-    "feedforward_2i_1w()"
+    "feedforward_1i_2ch_2w()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 3, 3, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#test na gradienty, jeden input, jeden weight filter\n",
-    "def gradient_1i_1w():\n",
+    "#test na feed forward, jeden input, dwa channele, dwa weight filter\n",
+    "def feedforward_2i_2ch_2w():\n",
+    "    x = tf.placeholder(tf.float32, [None, 9])\n",
+    "    x_reshaped = tf.reshape(x, [-1,3,3,2])\n",
+    "    w = np.zeros([2,2,2,2])\n",
+    "    w[0:2,0:2,0,0] = np.vstack(([1,1],[1,1]))\n",
+    "    w[0:2,0:2,1,0] = np.vstack(([1,1],[1,1]))\n",
+    "    w[0:2,0:2,0,1] = np.vstack(([1,1],[1,1]))\n",
+    "    W_conv1 = tf.Variable(tf.cast(w,dtype=tf.float32))\n",
+    "\n",
+    "    sess = tf.Session()\n",
+    "    sess.as_default()\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "    numbers = np.reshape(np.array([1,2,3,4,5,6,7,8,9], dtype=np.float32),(1,9))\n",
+    "    inputs = np.vstack((numbers,numbers,numbers,numbers));\n",
+    "    result = custom_conv2d(x_reshaped, W_conv1)\n",
+    "    result_n = conv2d(x_reshaped, W_conv1)\n",
+    "    result_conv = result.eval(session=sess, feed_dict={x: inputs})\n",
+    "    result_norm = result_n.eval(session=sess, feed_dict={x: inputs})\n",
+    "    assert result_conv.shape == result_norm.shape\n",
+    "    assert np.linalg.norm(result_conv-result_norm) < 0.01\n",
+    "feedforward_2i_2ch_2w()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#test na gradienty, jeden input, jeden channel, jeden weight filter\n",
+    "def gradient_1i_1ch_1w():\n",
     "    x = tf.placeholder(tf.float32, [None, 9])\n",
     "    x_reshaped = tf.reshape(x, [-1,3,3,1])\n",
     "    w = np.zeros([2,2,1,1])\n",
@@ -186,8 +192,87 @@
     "    gradients = var_grad.eval(session=sess, feed_dict={x: np.reshape(numbers,(1,9))})\n",
     "    gradients_n = var_grad_n.eval(session=sess, feed_dict={x: np.reshape(numbers,(1,9))})\n",
     "    assert np.linalg.norm(gradients-gradients_n) < 0.01\n",
-    "gradient_1i_1w()"
+    "gradient_1i_1ch_1w()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#test na feed forward, jeden input, dwa channele, dwa weight filter\n",
+    "def gradient_1i_2ch_2w():\n",
+    "    x = tf.placeholder(tf.float32, [None, 9])\n",
+    "    x_reshaped = tf.reshape(x, [-1,3,3,2])\n",
+    "    w = np.zeros([2,2,2,2])\n",
+    "    w[0:2,0:2,0,0] = np.vstack(([1,1],[1,1]))\n",
+    "    w[0:2,0:2,1,0] = np.vstack(([1,1],[1,1]))\n",
+    "    w[0:2,0:2,0,1] = np.vstack(([1,1],[1,1]))\n",
+    "    W_conv1 = tf.Variable(tf.cast(w,dtype=tf.float32))\n",
+    "\n",
+    "    sess = tf.Session()\n",
+    "    sess.as_default()\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "    numbers = np.reshape(np.array([1,2,3,4,5,6,7,8,9], dtype=np.float32),(1,9))\n",
+    "    inputs = np.vstack((numbers,numbers));\n",
+    "    result = custom_conv2d(x_reshaped, W_conv1)\n",
+    "    result_n = conv2d(x_reshaped, W_conv1)\n",
+    "    \n",
+    "    var_grad = tf.gradients(result, W_conv1)[0]\n",
+    "    var_grad_n = tf.gradients(result_n, W_conv1)[0]\n",
+    "    gradients = var_grad.eval(session=sess, feed_dict={x: inputs})\n",
+    "    gradients_n = var_grad_n.eval(session=sess, feed_dict={x: inputs})\n",
+    "    assert np.linalg.norm(gradients-gradients_n) < 0.01\n",
+    "gradient_1i_2ch_2w()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#test na feed forward, dwa inputy, dwa channele, dwa weight filter\n",
+    "def gradient_2i_2ch_2w():\n",
+    "    x = tf.placeholder(tf.float32, [None, 9])\n",
+    "    x_reshaped = tf.reshape(x, [-1,3,3,2])\n",
+    "    w = np.zeros([2,2,2,2])\n",
+    "    w[0:2,0:2,0,0] = np.vstack(([1,1],[1,1]))\n",
+    "    w[0:2,0:2,1,0] = np.vstack(([1,1],[1,1]))\n",
+    "    w[0:2,0:2,0,1] = np.vstack(([1,1],[1,1]))\n",
+    "    W_conv1 = tf.Variable(tf.cast(w,dtype=tf.float32))\n",
+    "\n",
+    "    sess = tf.Session()\n",
+    "    sess.as_default()\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "    numbers = np.reshape(np.array([1,2,3,4,5,6,7,8,9], dtype=np.float32),(1,9))\n",
+    "    inputs = np.vstack((numbers,numbers,numbers,numbers));\n",
+    "    result = custom_conv2d(x_reshaped, W_conv1)\n",
+    "    result_n = conv2d(x_reshaped, W_conv1)\n",
+    "    \n",
+    "    var_grad = tf.gradients(result, W_conv1)[0]\n",
+    "    var_grad_n = tf.gradients(result_n, W_conv1)[0]\n",
+    "    gradients = var_grad.eval(session=sess, feed_dict={x: inputs})\n",
+    "    gradients_n = var_grad_n.eval(session=sess, feed_dict={x: inputs})\n",
+    "    assert np.linalg.norm(gradients-gradients_n) < 0.01\n",
+    "gradient_2i_2ch_2w()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
