--- a/notebooks/AlexNet - XNORNET.ipynb
+++ b/notebooks/AlexNet - XNORNET.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -75,8 +75,7 @@
     "b_conv7 = bias_variable([4096])\n",
     "h_conv7 = conv2d(h_drop2, W_conv7, b_conv7)\n",
     "\n",
-    "#nClasses = ?\n",
-    "nClasses = 100\n",
+    "nClasses = 1000\n",
     "W_conv8 = weight_variable([1, 1, 4096, nClasses])\n",
     "b_conv8 = bias_variable([nClasses])\n",
     "y = conv2d(h_conv7, W_conv8, b_conv8)[:,0,0,:]\n",
@@ -84,12 +83,12 @@
     "y_ = tf.placeholder(tf.float32, [None, nClasses])\n",
     "\n",
     "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=y, labels=y_))\n",
-    "train_step = tf.train.AdamOptimizer(1e-1, beta1=0.01).minimize(loss)"
+    "train_step = tf.train.AdamOptimizer(1e-1, beta1=0.01).minimize(cross_entropy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.60517\n"
+      "6.90776\n"
      ]
     }
    ],
@@ -107,7 +106,7 @@
     "sess.as_default()\n",
     "sess.run(tf.global_variables_initializer())\n",
     "numbers = np.ones(224*224*3).reshape(1,224*224*3)\n",
-    "ys = np.zeros((1,100))\n",
+    "ys = np.zeros((1,1000))\n",
     "ys[0][2] = 1\n",
     "result = cross_entropy.eval(session=sess, feed_dict={x: numbers, prob: 0.5, y_: ys})\n",
     "print(result)"
